fuse/fuse-webservice/account-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account-service
  name: account-service
spec:
  ports:
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 9779-tcp
    port: 9779
    protocol: TCP
    targetPort: 9779
  selector:
    app: account-service
    deploymentconfig: account-service
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
