fuse/fuse-webservice/account-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: account-service
  name: account-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: account-service
    weight: 100
  wildcardPolicy: None
